--- a/cart.html
+++ b/cart.html
@@ -51,32 +51,11 @@
         </header>
          
         <main>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1>Cart</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Product</th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Quantity</th>
-                                    <th scope="col">Total</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Print</td>
-                                    <td>10.00</td>
-                                    <td>1</td>
-                                    <td>10.00</td>
-                                </tr>
-                                <tr>
-                                    <td>Keychain</td>
-                                    <td>5.00</td>
-                                    <td>2
+          <div id="cart">
+            <h2>Shopping Cart</h2>
+            <ul id="cart-items"></ul>
+            <p id="cart-total">Total: $0.00</p>
+        </div>
+        </main>        
+        <script src="scripts/cart.js"></script>
 </html>
