--- a/indexProduct.html
+++ b/indexProduct.html
@@ -65,7 +65,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 1', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -75,7 +75,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 2', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -85,7 +85,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 3', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 4', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 5', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 6', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 7', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -135,7 +135,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 8', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -145,7 +145,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 9', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 10', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 11', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="cartbtn">Add to Cart</button>
+                <button class="cartbtn" onclick="addToCart('Product 12', 10.00)">Add to Cart</button>
               </div>
             </div>
           </div>
@@ -210,6 +210,7 @@
           <a href="https://www.instagram.com/seika_artz/?hl=en"><img src="images/instaicon.png" alt="instagram" title="instagram"></a>
     </nav>
     </footer>
+    <script src="scripts/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
